--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Arun Ram's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
-    <h3><a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</h3></a>
+    <h3><a href="../html-portfolio/public/movie-ranking.html">Movie Ranking Project</h3></a>
     <img src="../4.3 HTML Porfolio Project/assets/images/movie-ranking.png" height="200" />
 
     <h3><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</h3></a>
