--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h2>I'm a Web Developer</h2>
     <hr />
     <h3><a href="../html-portfolio/public/movie-ranking.html">Movie Ranking Project</h3></a>
-    <img src="../4.3 HTML Porfolio Project/assets/images/movie-ranking.png" height="200" />
+    <img src="../html-portfolio/assets/images/movie-ranking.png" height="200" />
 
-    <h3><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</h3></a>
-    <img src="../4.3 HTML Porfolio Project/assets/images/birthday-invite.png" height="200" />
+    <h3><a href="../html-portfolio/public/birthday-invite.html">Birthday Invite Project</h3></a>
+    <img src="../html-portfolio/assets/images/birthday-invite.png" height="200" />
 
     <hr />
 
