--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
     <hr />
 
-    <a href="../4.3 HTML Porfolio Project/public/about.html">About Me</a> <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact Me</a>
+    <a href="../html-portfolio/public/about.html">About Me</a> <a href="../html-portfolio/public/contact.html">Contact Me</a>
     
 </html>
