--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -5,7 +5,7 @@
 <hr />
 
 <h3>The Dark Knight</h3>
-<p>Mosy fun during school days!</p>
+<p>Most fun during school days!</p>
 
 <h3>Inception</h3>
 <p>Most intellectually stimulating</p>
